# metalluno

./: Cargo.toml  Makefile  README.md
atmega328p/: Cargo.toml
atmega328p/src/: hal.rs  lib.rs
atmega328p/src/hal/: gpio.rs  usart.rs
atmega328p/src/peripheral/: port.rs  register.rs
atmel328p/: Cargo.toml
atmel328p/src/: peripheral.rs
atmel328p/src/hal/: gpio.rs
example/blinky-dpin-uno/: Cargo.toml
example/blinky-dpin-uno/src/: main.rs
example/blinky-gpio-direct/: Cargo.toml
example/blinky-gpio-direct/src/: main.rs
example/blinky-hal-direct/: Cargo.toml
example/blinky-hal-direct/src/: main.rs
example/blinky-led-uno/: Cargo.toml
example/blinky-led-uno/src/: main.rs
example/echo-usart-direct/: Cargo.toml
example/echo-usart-direct/src/: main.rs
example/hello-usart-direct/: Cargo.toml
example/hello-usart-direct/src/: main.rs
src/: lib.rs  main.rs  stubs.rs
src/hal/: gpio.rs
uno/: Cargo.toml
uno/src/: board.rs  lib.rs
uno/src/board/: led.rs  pin.rs
utils/: Cargo.toml
utils/src/: lib.rs
