[package]
name = "metalluno"
version = "0.1.0"
authors = ["Mario Raspiantoro <raspiantoro@gmail.com>"]
edition = '2018'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avr_delay = { git = "https://github.com/avr-rust/delay" }

[profile.release]
lto = true
