[package]
name = "blinky-dpin-uno"
version = "0.1.0"
authors = ["Mario Raspiantoro <raspiantoro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avr_delay = { git = "https://github.com/avr-rust/delay", tag = "0.3.2" }
utils = {path="../../utils"}
uno={path="../../uno"}